la base del proyecto creada

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='dist/css/css.min.css' />
   </head>
   <body>
     {{{body}}}
+    <script type="text/javascript" src="dist/script/script.min.js">
+    </script>
   </body>
 </html>
