falta el css y una parte del body

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,161 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!--Parte de las Fotos de paises-->
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="images/imagenes/madrid.JPG" alt="Card image cap" width="200px">
+    <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 90$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">359$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body text-center">
+      <h5 class="card-title">Madrid</h5>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="images/imagenes/new_york.JPG" alt="Card image cap" width="180px">
+    <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 75$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">729$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body text-center">
+      <h5 class="card-title">New York</h5>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="images/imagenes/tokyo.JPG" alt="Card image cap" width="200px">
+    <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 35$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">519$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body text-center">
+      <h5 class="card-title">Tokyo</h5>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck">
+    <div class="card">
+        <img class="card-img-top" src="images/imagenes/ciudad_mexico.JPG" alt="Card image cap" width="200px">
+        <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 65$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">329$</div>
+                </div>
+            </div>
+        </div>
+    </div>
+        <div class="card-body text-center">
+            <h5 class="card-title">Ciudad de Mexico</h5>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="images/imagenes/buenos_aires.JPG" alt="Card image cap" width="200px">
+        <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 95$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">199$</div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="card-body text-center">
+            <h5 class="card-title">Buenos Aires</h5>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="images/imagenes/beijing.JPG" alt="Card image cap" width="200px">
+        <div class="card-img-overlay">
+        <div class="row">
+            <div class="col-8">
+                <div id="textIdBlue">
+                    <div class="textBlue">Save 50$ to pay only</div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div id="textIdYellow">
+                    <div class="textYellow font-weight-bold">659$</div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="card-body text-center">
+            <h5 class="card-title">Beijing</h5>
+        </div>
+    </div>
+</div>
+
+<!--Parte de QUienes somos -->
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 Quien">
+            <div class="row">
+                <div class="col-1 offset-6">
+                    <div class="Quien card" style="width:25rem">
+                        <div class="card-body">
+                            <h5 class="tittleQS card-title">QUIENES SOMOS</h5>
+                                <p class="textQS card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros 
+                                entusiastas que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios hemos
+                                diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica y Asia. Nuestro objetivo
+                                ahora es ir ampliando nuevos horizontes poco a poco.</p>
+                            <a href="#" class="btn btn-primary btn-lg" id="btnD">Descubrir</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--parte del mapa y demás-->
+
+<div class="container-fluid maps">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-4">
+            <iframe src="https://www.google.es/maps/place/Av.+de+los+Naranjos,+Valencia/@39.4779502,-0.3413868,17z/data=!3m1!4b1!4m5!3m4!1s0xd604887aa8566d3:0xc9d1c174c0516b1a!8m2!3d39.4779502!4d-0.3391981" 
+            width="350" height="450" frameborder="0" style="border:0" allowfullscreen>></iframe>
+        </div>
+    </div>
+</div>
