login y resgistrar creado y mysql instalado

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,9 +12,9 @@
 
         <div class="col-6 d-none d-md-block">
           <nav class="nav">
-            <a class="nav-link active" href="#">Destinos</a>
-            <a class="nav-link" href="#">Quienes Somos</a>
-            <a class="nav-link" href="#">Donde estamos</a>
+            <a class="nav-link active" href="card-deck">Destinos</a>
+            <a class="nav-link" href="tituloquien">Quienes Somos</a>
+            <a class="nav-link" href="">Donde estamos</a>
           </nav>
         </div>
 
@@ -47,9 +47,9 @@
             <div class="collapse" id="navbarToggleExternalContent">
               <div class="bg-dark p-4">
                 <nav class="nav1 navbar-expand-lg">
-                  <a class="nav-link active" href="#">Destinos</a>
-                  <a class="nav-link" href="#">Quienes Somos</a>
-                 <a class="nav-link" href="#">Donde estamos</a>
+                  <a class="nav-link active" href="card-img-top">Destinos</a>
+                  <a class="nav-link" href="tituloquien">Quienes Somos</a>
+                 <a class="nav-link" href="mapaGoogle">Donde estamos</a>
                </nav>
 
               </div>
