--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,27 +8,40 @@
                             <h3 class="tituloRegistro">LOGIN</h3>
                         </div>
                     </div>    
+
                     <div class="cuerpoLogin">
-                        <form>
+                        <form method="POST">
                             <div class="formulario">
-                                <input class="form-control" placeholder="Usuario o E-mail" name="usuario o E-mail" type="text">
+                                <input class="form-control" placeholder="Usuario o E-mail" name="uname" type="text">
                             </div>
                             <div class="formulario">
-                                <input class="form-control" placeholder="Contraseña" name="password" type="password" value="">
+                                <input class="form-control" placeholder="Contraseña" name="psw" type="password" value="">
                             </div>
+
+
+                            <div class="form-group-login">
+                                <div class="col-sm-9 col-sm-offset-4">
+                                    <button type="submit" class="btn btn-primary btn-block">Enviar</button>
+                                </div>
+                            </div>
+
+                            <div>
+                                <a href="#" class="forgot-password">
+                                    ¿No recuerdas tu contraseña?
+                                </a>
+                            </div>
+
                         </form>
                     </div>
-                    
-                    <div class="form-group-login">
-                        <div class="col-sm-9 col-sm-offset-4">
-                            <button type="submit" class="btn btn-primary btn-block">Enviar</button>
-                        </div>
-                    </div>
+
+
+
+                {{#if info}}
                     <div>
-                        <a href="#" class="forgot-password">
-                            ¿No recuerdas tu contraseña?
-                        </a>
+                        alert(Error{{info}})
                     </div>
+                {{/if}}
+
                 </div>     
             </div>
         </div>
