--- a/views/index.hbs
+++ b/views/index.hbs
@@ -259,7 +259,7 @@
 </div>
 <!--Parte de Quienes somos -->
 
-<div class="container-fluid">
+<div class="container-fluid d-none d-md-block">
     <div class="row">
         <div class="col-12 Quien">
             <div class="row">                
@@ -279,6 +279,32 @@
         </div>
     </div>
 </div>
+
+
+<!--¿Quienes somos? sin imagen -->
+
+<div class="container-fluid d-none d-sm-block d-md-none">
+    <div class="row">
+        <div class="col-12 Quienes">
+            <div class="row">                
+                <div class="col-6 offset-4">
+                    <div class="card margin">
+                        <div class="card-body">
+                            <h5 class="tituloquien card-title"><strong>QUIENES SOMOS</strong></h5>
+                            <hr></hr>
+                            <p class="textoquien card-text">GeekHubs Travels es una agencia de viajes online creada en 2009 or un equipo de viajeros entusiastas
+                                que deciden hacer de su pasión por conocer el mundo un modo de vida. Desde nuestros inicios
+                                hemos diseñado más de 500 viajes organizados a diferentes destino de Europa, Norteamérica
+                                y Asia. Nuestro objetivo ahora es ir ampliando nuevos horizontes poco a poco.</p>
+                            <a href="#" class="btn btn-primary btn-lg" id="btnD">Descubrir</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!--parte del mapa y demás-->
 
