--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,10 +4,23 @@
             <div class="offset-3 col-6">
                 <div class="cuadrado"></div>
                     <div class="row">
+
+                    <div class="Error">
+                        
+                        {{#if info}}
+                            <div>
+                                (El error es porque {{ info}})
+                            </div>
+                        {{/if}}
+                    </div>
+
                         <div class="offset-2 col-7">
                             <h3 class="tituloRegistro">LOGIN</h3>
                         </div>
                     </div>    
+
+
+
 
                     <div class="cuerpoLogin">
                         <form method="POST">
@@ -26,21 +39,35 @@
                             </div>
 
                             <div>
-                                <a href="#" class="forgot-password">
+                                <a href="#" class="forgot-password" data-toggle="modal" data-target="#RecuperarPass">
                                     ¿No recuerdas tu contraseña?
                                 </a>
                             </div>
+                        </form>
 
+
+                        <form method="POST">
+                            <div class="modal" tabindex="-1" role="dialog" id="RecuperarPass">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Escribenos un correo</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input class="form-control" placeholder="Escribe tu correo" name="recuperarPass" type="text" value="">                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-primary">Enviar</button>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
                     </div>
 
-
-
-                {{#if info}}
-                    <div>
-                        alert(Error{{info}})
-                    </div>
-                {{/if}}
 
                 </div>     
             </div>
