Aceptar condiciones y obligado poner email

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -25,10 +25,10 @@
                     <div class="cuerpoLogin">
                         <form method="POST">
                             <div class="formulario">
-                                <input class="form-control" placeholder="Usuario o E-mail" name="uname" type="text">
+                                <input class="form-control" placeholder="Usuario o E-mail" name="uname" type="text" required >
                             </div>
                             <div class="formulario">
-                                <input class="form-control" placeholder="Contraseña" name="psw" type="password" value="">
+                                <input class="form-control" placeholder="Contraseña" name="psw" type="password" value="" required >
                             </div>
 
 
@@ -57,7 +57,7 @@
                                             </button>
                                         </div>
                                         <div class="modal-body">
-                                            <input class="form-control" placeholder="Escribe tu correo" name="recuperarPass" type="text" value="">                                        </div>
+                                            <input class="form-control" placeholder="Escribe tu correo" name="recuperarPass" type="email" value="">                                        </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-primary">Enviar</button>
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
