--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -14,22 +14,22 @@
                 <div class="cuerpoRegistro">
                     <form method="POST">
                         <div class="formulario">
-                            <input class="form-control" placeholder="Usuario" name="usua" type="text">
+                            <input class="form-control" placeholder="Usuario" name="usua" type="text" required>
                         </div>
                         <div class="formulario">
-                            <input class="form-control" placeholder="E-mail" name="email" type="text">
+                            <input class="form-control" placeholder="E-mail" name="email" type="email" required>
                         </div>
                         <div class="formulario">
-                            <input class="form-control" placeholder="Contraseña" name="passw" type="password" value="">
+                            <input class="form-control" placeholder="Contraseña" name="passw" type="password" value="" required>
                         </div>
                         <div class="formulario">
-                            <input class="form-control" placeholder="Confirmar contraseña" name="passw2" type="password" value="">
+                            <input class="form-control" placeholder="Confirmar contraseña" name="passw2" type="password" value="" required>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-9 col-sm-offset-4">
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox">Acepto los términos y condiciones, así como la
+                                        <input type="checkbox" required >Acepto los términos y condiciones, así como la
                                         <a href="#">politica de privacidad</a>
                                     </label>
                                 </div>
