Añadido el hash, contraseña codificada, no permite repetir usuarios

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <!--Parte de las Fotos de paises-->
 <div class="card-deck">
-    <div class="card  d-none d-md-block">
+    <div class="card  d-none d-md-block" id="fotos">
         <img class="card-img-top" src="images/imagenes/madrid.JPG" alt="Card image cap" width="200px">
         <div class="card-img-overlay">
             <div class="row">
@@ -259,7 +259,7 @@
 </div>
 <!--Parte de Quienes somos -->
 
-<div class="container-fluid d-none d-md-block">
+<div class="container-fluid d-none d-md-block" id="tituloquien">
     <div class="row">
         <div class="col-12 Quien">
             <div class="row">                
@@ -283,7 +283,7 @@
 
 <!--¿Quienes somos? sin imagen -->
 
-<div class="container-fluid d-none d-sm-block d-md-none">
+<div class="container-fluid d-none d-sm-block d-md-none" id="tituloquiens">
     <div class="row">
         <div class="col-12 Quienes">
             <div class="row">                
@@ -309,7 +309,7 @@
 <!--parte del mapa y demás-->
 
 
-<div class="container-fluid  d-none d-md-block">
+<div class="container-fluid  d-none d-md-block" id="Donde">
     <div class="row">
         <div class="col-2">
         </div>
