--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,9 +12,11 @@
 
         <div class="col-6 d-none d-md-block">
           <nav class="nav">
-            <a class="nav-link active" href="card-deck">Destinos</a>
-            <a class="nav-link" href="tituloquien">Quienes Somos</a>
-            <a class="nav-link" href="">Donde estamos</a>
+            <a class="nav-link active" href="/#fotos">Destinos</a>
+            <a class="nav-link" href="/#tituloquien">Quienes Somos</a>
+            <a class="nav-link" href="/#Donde">Donde estamos</a>
+            <a class="nav-link" href="../login">Login</a>
+            <a class="nav-link" href="../registro">Registro</a>
           </nav>
         </div>
 
@@ -41,47 +43,48 @@
           </div>
         </div>
 
-<!--Barra de opciones en pequeño-->
+        <!--Barra de opciones en pequeño-->
 
-          <div class="pos-f-t d-block d-md-none">
-            <div class="collapse" id="navbarToggleExternalContent">
-              <div class="bg-dark p-4">
-                <nav class="nav1 navbar-expand-lg">
-                  <a class="nav-link active" href="card-img-top">Destinos</a>
-                  <a class="nav-link" href="tituloquien">Quienes Somos</a>
-                 <a class="nav-link" href="mapaGoogle">Donde estamos</a>
-               </nav>
+        <div class="pos-f-t d-block d-md-none">
+          <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+              <nav class="nav1 navbar-expand-lg">
+                <a class="nav-link active" href="/#carouselExampleFade">Destinos</a>
+                <a class="nav-link" href="/#tituloquiens">Quienes Somos</a>
+                <a class="nav-link" href="../login">Login</a>
+                <a class="nav-link" href="../registro">Registro</a>
+              </nav>
 
-              </div>
             </div>
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-              <div class="imagen-barra">  
-                <img class="puente2 justify-content-start" src="images/iconoweb.png"></img>
-                  <h5>
-                    <strong>GeekHubs
-                    <br>Travels</strong>
-                  </h2>
-              </div>   
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </nav>
-
           </div>
-
-        <div class="col-12 justify-content-start">
-          <div class="row text">
+          <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <div class="imagen-barra">
+              <img class="puente2 justify-content-start" src="images/iconoweb.png"></img>
+              <h5>
+                <strong>GeekHubs
+                  <br>Travels</strong>
+                </h2>
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+              aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </nav>
+        </div>
+        <div class="row text">
+          <div class="col-12 justify-content-center">
             <h1>Viaja!
               <br> Descubre lugares maravillosos!
             </h1>
           </div>
         </div>
-
-      <div class="Destinos">
-        <button type="button" class="btn btn-warning btn-lg">ver destinos</button>
-      </div>
-
+        <div class="row text">
+          <div class="col-12 justify-content-start">
+            <div class="Destinos">
+              <button type="button" class="btn btn-warning btn-lg">ver destinos</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
