--- a/views/emails/email.hbs
+++ b/views/emails/email.hbs
@@ -1,1 +1,15 @@
-<p>akdjahdksfjlsajdlsjld</p>
+Hola!!
+<br>
+<p>ESTE CORREO ES PARA QUE PUEDAS RECUPERAR TU CONTRASEÑA</p>
+
+
+<p>Pincha aqui para mandarte a la direccion para recuperar la contraseña
+    <div>
+        <a href="#" class="forgot-password" data-toggle="modal" data-target="#RecuperarPassCorreo">
+            http://localhost:3000/
+        </a>
+    </div>
+
+
+
+</p>
