--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -2,34 +2,35 @@
     <div class="row">
         <div class="col-12 ima-registro">
             <div class="offset-3 col-6">
-                <div class="cuadrado"></div>
-                <div class="row">
-                    <div class="offset-3 col-7">
-                        <h3 class="tituloRegistro">REGISTRO</h3>
-                    </div>
+                <div class="cuadrado">
+                    <div class="row">
+                         <div class="offset-3 col-7">
+                            <h3 class="tituloRegistro">REGISTRO</h3>
+                            </div>
                     <div class="offset-4 col-5">
-                        <h5 class="preguntaRegistro">¿Ya estás registrado?</h5>
+                        <a href="./login" class="preguntaRegistro">¿Ya estás registrado?</a>
                     </div>
                 </div>
                 <div class="cuerpoRegistro">
                     <form method="POST">
                         <div class="formulario">
-                            <input class="form-control" placeholder="Usuario" name="usua" type="text" required>
+                            <input class="form-control" placeholder="Escribe un usuario" name="usua" type="text" required>
                         </div>
                         <div class="formulario">
-                            <input class="form-control" placeholder="E-mail" name="email" type="email" required>
+                            <input class="form-control" placeholder="Escribe un correo" name="email" type="email" required>
                         </div>
                         <div class="formulario">
-                            <input class="form-control" placeholder="Contraseña" name="passw" type="password" value="" required>
+                            <input class="form-control" placeholder="Escribe una contraseña" name="passw" type="password" value="" required>
                         </div>
                         <div class="formulario">
                             <input class="form-control" placeholder="Confirmar contraseña" name="passw2" type="password" value="" required>
                         </div>
+
                         <div class="form-group">
                             <div class="col-sm-9 col-sm-offset-4">
                                 <div class="checkbox">
                                     <label>
-                                        <input type="checkbox" required >Acepto los términos y condiciones, así como la
+                                        <input type="checkbox" required>Acepto los términos y condiciones, así como la
                                         <a href="#">politica de privacidad</a>
                                     </label>
                                 </div>
@@ -43,8 +44,6 @@
                         </div>
                     </form>
                 </div>
-
-
             </div>
         </div>
     </div>
