Funciona sesiones, pero se tiene que cambiar de header

--- a/views/emails/email.hbs
+++ b/views/emails/email.hbs
@@ -1,7 +1,4 @@
-Hola!!
-<br>
-<p>ESTE CORREO ES PARA QUE PUEDAS RECUPERAR TU CONTRASEÑA</p>
-
+<p>Hola {{ username }}</p><br/>>
 
 <p>Pincha aqui para mandarte a la direccion para recuperar la contraseña
     <div>
@@ -9,7 +6,7 @@ Hola!!
             http://localhost:3000/
         </a>
     </div>
-
-
-
 </p>
+
+
+<p>Pulsa el siguiente <a href="http://localhost:3005/activate/{{hash}}">link</a></p>
