Comprobación de usuario activo o no y mantenimiento de la sesion

--- a/views/emails/email.hbs
+++ b/views/emails/email.hbs
@@ -1,12 +1,2 @@
 <p>Hola {{ username }}</p><br/>>
-
-<p>Pincha aqui para mandarte a la direccion para recuperar la contraseña
-    <div>
-        <a href="#" class="forgot-password" data-toggle="modal" data-target="#RecuperarPassCorreo">
-            http://localhost:3000/
-        </a>
-    </div>
-</p>
-
-
-<p>Pulsa el siguiente <a href="http://localhost:3005/activate/{{hash}}">link</a></p>
+<p>Pulsa el siguiente <a href="http://localhost:3000/activate/{{hash}}">Activar</a></p>
