--- a/views/partials/simp.hbs
+++ b/views/partials/simp.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid justify-content-between">
   <div class="row">
-    <div class="col-12 image">
+    <div class="col-12 image-simp">
       <div class="row">
         <div class="col-3 d-none d-md-block">
           <img class="puente" src="images/iconoweb.png"></img>
@@ -9,7 +9,6 @@
               <br>Travels</strong>
           </h2>
         </div>
-
         <div class="col-6 d-none d-md-block">
           <nav class="nav">
             <a class="nav-link active" href="/#fotos">Destinos</a>
@@ -26,7 +25,6 @@
           {{/if}}
           </nav>
         </div>
-
         <div class="col-3 d-none d-md-block">
           <div class="row iconos">
             <div class="col-2">
@@ -69,27 +67,13 @@
               <h5>
                 <strong>GeekHubs
                   <br>Travels</strong>
-                </h5>
+              </h5>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
               aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           </nav>
-        </div>
-        <div class="row text">
-          <div class="col-12 justify-content-center">
-            <h1>Viaja!
-              <br> Descubre lugares maravillosos!
-            </h1>
-          </div>
-        </div>
-        <div class="row text">
-          <div class="col-12 justify-content-start">
-            <div class="Destinos">
-              <button type="button" class="btn btn-warning btn-lg">ver destinos</button>
-            </div>
-          </div>
         </div>
       </div>
     </div>
