--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -5,8 +5,8 @@
                 <div class="col-2"></div>
                 <div class="col-8 d-flex justify-content-center">
                     <div class="adminBox text-center">
-                        <h3 style="color:black" class="text-center">Bienvenido al area de administración</h3>
-                        <p>Desde aquí podrás crear viajes o gestionar ya existentes</p>
+                        <h3 style="color:black" class="text-center">Bienvenido a la zona de administración</h3>
+                        <p>Donde vas a poder crear viajes o gestionar los que ya tienes existentes</p>
                         <table class="table table-hover">
                             <thead>
                                 <tr>
@@ -36,7 +36,10 @@
                             </tbody>
                         </table>
                         <div>
-                            <button type="button" class="btn btn-primary">Añadir</button>
+                            <button type="submit" class="btn btn-primary">Añadir</button>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn btn-primary">Modificar</button>
                         </div>
                     </div>
                 </div>
