--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -12,7 +12,7 @@
                     </div>
                 </div>
                 <div class="cuerpoRegistro">
-                    <form method="POST">
+                    <form method="POST" class="needs-validation" novalidate>
                         <div class="formulario">
                             <input class="form-control" placeholder="Escribe un usuario" name="usua" type="text" required>
                         </div>
@@ -20,10 +20,13 @@
                             <input class="form-control" placeholder="Escribe un correo" name="email" type="email" required>
                         </div>
                         <div class="formulario">
-                            <input class="form-control" placeholder="Escribe una contraseña" name="passw" type="password" value="" required>
+                            <input class="form-control" placeholder="Escribe una contraseña" id="password" name="passw" type="password" value="" required>
                         </div>
                         <div class="formulario">
-                            <input class="form-control" placeholder="Confirmar contraseña" name="passw2" type="password" value="" required>
+                            <input class="form-control" placeholder="Confirmar contraseña" id="password2" name="passw2" type="password" value="" required>
+                            <div class="invalid-feedback" id="advicePassDiferent">
+                                La contraseña es distinta, tiene que ser la misma
+                            </div>
                         </div>
 
                         <div class="form-group">
