--- a/views/anadir.hbs
+++ b/views/anadir.hbs
@@ -17,8 +17,8 @@
         </label>
     </form>
     <div class="form-group-login">
-        <div class="col-sm-9 col-sm-offset-4">
-            <button type="submit" class="btn btn-primary btn-block">Crear</button>
+        <div class="col-sm-9 col-sm-offset-4" id="crearAn">
+            <button type="submit" id="crearAnadir" class="btn btn-primary btn-block">Crear</button>
         </div>
     </div>
 </div>
