--- a/views/layout-simp.hbs
+++ b/views/layout-simp.hbs
@@ -5,6 +5,7 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='components/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='dist/css/css.min.css' />
+    <link rel="stylesheet" href="components/components-font-awesome/css/fontawesome-all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Siempre se deja el ultimo, para que te seleccione tu css -->
   </head>
